# launch-lights

./: .gitignore  README.md  pyproject.toml
docs/: audio-show.md  launchpad-pro-protocol.md  manual-verification.md
src/launch_lights/: __main__.py  cli.py
src/launch_lights/device/: launchpad_pro.py  launchpad_pro_mk3.py  midi_io.py
src/launch_lights/engine/: frame.py  plan.py  renderer.py  scheduler.py
src/launch_lights/util/: color.py
src/launch_lights/video/: audio_show.py  audio_source.py  palette.py  patterns.py  pipeline.py  source.py
src/launch_lights/web/: server.py
tests/: test_dither.py  test_end_to_end.py  test_full_frame_ordering.py  test_launchpad_pro_mk3_protocol.py  test_launchpad_pro_protocol.py  test_pad_mapping.py  test_palette_lut.py  test_pipeline_fit.py  test_pipeline_quantize.py  test_port_detection.py  test_renderer_planning.py  test_scheduler_drift.py  test_sysex_chunking.py
tests/fixtures/: fake_midi.py
